# seL4

./: .cmake-format.yaml  .gitignore  .licenseignore  CAVEATS-generic.md  CAVEATS-generic.txt  CAVEATS-ia32.md  CAVEATS-ia32.txt  CAVEATS.md  CHANGES  CHANGES.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  FindseL4.cmake  Kconfig  LICENSE.md  LICENSE_BSD2.txt  LICENSE_GPL2.txt  Makefile  README  README.md  SECURITY.md  VERSION  clang-gcc.cmake  config.cmake  gcc.cmake  gdb-macros  llvm.cmake  random.txt  utils.cmake
haskell/: .gitignore  INSTALL  Makefile  README.md  SEL4-ARM.cabal  SEL4.cabal  Setup.hs  build  configure  mkhsboot.pl
haskell/doc/: Makefile  README  disy.sty  haskell.tex  lambdaTeX.sty  mkfunctions.pl  mkmodulesgraph.pl  overview.tex  packages  pubs.bib  refman.tex
haskell/doc/figures/: clientkernel.mp  clientserver.mp  derive.mp  ipctransfer.mp  modules.dot  truncation.mp
haskell/include/: gic.h  mct.h  mptimer.h  sel4model.h
haskell/src/: HaskellCPU.lhs  SEL4.lhs
haskell/src/Data/: BinaryTree.hs  Helpers.hs
haskell/src/SEL4/: API.lhs  Config.lhs  Kernel.lhs  Machine.lhs  Model.lhs  Object.lhs
haskell/src/SEL4/API/: Failures.lhs  Faults.lhs  Invocation.lhs  InvocationLabels.lhs  Syscall.lhs  Types.lhs
haskell/src/SEL4/API/Invocation/: ARM.lhs
haskell/src/SEL4/API/InvocationLabels/: ARM.lhs
haskell/src/SEL4/API/Types/: ARM.lhs  HaskellCPU.lhs  Universal.lhs
haskell/src/SEL4/Kernel/: BootInfo.lhs  CSpace.lhs  FaultHandler.lhs  Init.lhs  Thread.lhs  VSpace.lhs
haskell/src/SEL4/Kernel/Thread/: ARM.lhs
haskell/src/SEL4/Kernel/VSpace/: ARM.lhs  CSpace.lhs  HaskellCPU.lhs
haskell/src/SEL4/Machine/: Hardware.lhs  RegisterSet.lhs  Target.lhs
haskell/src/SEL4/Machine/Hardware/: ARM.lhs  Alpha.lhs  GICInterface.hsc  HaskellCPU.lhs  MCTInterface.hsc  MPTimerInterface.hsc
haskell/src/SEL4/Machine/RegisterSet/: ARM.lhs  HaskellCPU.lhs
haskell/src/SEL4/Model/: Failures.lhs  PSpace.lhs  Preemption.lhs  StateData.lhs  Syscall.lhs
haskell/src/SEL4/Model/StateData/: ARM.lhs
haskell/src/SEL4/Object/: AsyncEndpoint.lhs  CNode.lhs  Endpoint.lhs  Instances.lhs  Interrupt.lhs  Notification.lhs  ObjectType.lhs  Structures.lhs  TCB.lhs  Untyped.lhs
haskell/src/SEL4/Object/Instances/: ARM.lhs
haskell/src/SEL4/Object/Interrupt/: ARM.lhs
haskell/src/SEL4/Object/ObjectType/: ARM.lhs  HaskellCPU.lhs
haskell/src/SEL4/Object/Structures/: ARM.lhs
haskell/src/SEL4/Object/TCB/: ARM.lhs
haskell/src/Simulation/: FFIBindings.hs
libsel4/: CMakeLists.txt  Kbuild  Kconfig  Makefile
libsel4/arch_include/arm/interfaces/: object-api-arch.xml  sel4arch.xml
libsel4/arch_include/arm/sel4/arch/: bootinfo.h  constants.h  constants_cortex_a15.h  constants_cortex_a35.h  constants_cortex_a53.h  constants_cortex_a55.h  constants_cortex_a57.h  constants_cortex_a7.h  constants_cortex_a72.h  constants_cortex_a76.h  constants_cortex_a78ae.h  constants_cortex_a8.h  constants_cortex_a9.h  constants_morello.h  deprecated.h  exIPC.h  functions.h  mapping.h  objecttype.h  pfIPC.h  shared_types.bf  shared_types.h  simple_types.h  syscalls.h  types.h
libsel4/arch_include/ia32/interfaces/: sel4arch.xml
libsel4/arch_include/ia32/sel4/arch/: bootinfo.h  constants.h  exIPC.h  objecttype.h  syscalls.h  types.h
libsel4/arch_include/loongarch/interfaces/: sel4arch.xml
libsel4/arch_include/loongarch/sel4/arch/: exIPC.h  objecttype.h  syscalls.h  types.h
libsel4/arch_include/riscv/interfaces/: object-api-arch.xml  sel4arch.xml
libsel4/arch_include/riscv/sel4/arch/: bootinfo.h  constants.h  deprecated.h  exIPC.h  functions.h  mapping.h  objecttype.h  pfIPC.h  shared_types.bf  shared_types.h  simple_types.h  syscalls.h  types.h
libsel4/arch_include/x86/interfaces/: object-api-arch.xml  sel4arch.xml
libsel4/arch_include/x86/sel4/arch/: bootinfo.h  (+14 more)
libsel4/arch_include/x86_64/interfaces/: sel4arch.xml
libsel4/include/: assert.h  libsel4_assert.h  libsel4_halt.h  libsel4_io.h  libsel4_stdarg.h  libsel4_stdbool.h  libsel4_stddef.h  libsel4_stdint.h  stdarg.h  stdbool.h  stddef.h  stdint.h
libsel4/include/api/: syscall.xml  syscall.xsd
libsel4/include/interfaces/: object-api.xml  sel4.xml  test-iz1.xml
libsel4/include/sel4/: assert.h  benchmark.h  benchmark_tracepoints_types.h  benchmark_track_types.h  benchmark_utilisation_types.h  bootinfo.h  bootinfo_types.h  cap_rights.h  config.h  constants.h  debug_assert.h  deprecated.h  errors.h  faults.h  functions.h  log.h  macros.h  messages.h  objecttype.h  sel4.h  shared_types.bf  shared_types.h  shared_types_32.bf  shared_types_64.bf  simple_types.h  syscalls.h  syscalls_master.h  syscalls_mcs.h  tfIPC.h  types.bf  types.h  types_32.bf  types_64.bf  virtual_client.h
libsel4/mode_include/32/sel4/: shared_types.bf
libsel4/mode_include/64/sel4/: shared_types.bf
libsel4/sel4_arch_include/: arm_hyp
libsel4/sel4_arch_include/aarch32/interfaces/: object-api-sel4-arch.xml  sel4arch.xml
libsel4/sel4_arch_include/aarch64/interfaces/: object-api-sel4-arch.xml  sel4arch.xml
libsel4/sel4_arch_include/arm/interfaces/: sel4arch.xml
libsel4/sel4_arch_include/ia32/interfaces/: sel4arch.xml
libsel4/sel4_arch_include/riscv32/interfaces/: sel4arch.xml
libsel4/sel4_arch_include/riscv64/interfaces/: object-api-sel4-arch.xml
libsel4/sel4_arch_include/x86_64/: test-iz2.xml
libsel4/sel4_arch_include/x86_64/interfaces/: object-api-sel4-arch.xml  sel4arch.xml  test-file-to-include.xml  text-iz.xml
libsel4/sel4_plat_include/: imx8mm-evk
libsel4/src/: assert.c  bootinfo.c  halt.c  libsel4_io.c  sel4_bootinfo.c
libsel4/src/arm/: libsel4_start.S
libsel4/src/x86/: libsel4_start.S
libsel4/tools/: __init__.py  bitfield_gen.py  changed.sh  common_error_illegal_operation.xml  common_error_illegal_operation_append.xml  common_error_invalid_capability.xml  common_error_invalid_capability_append.xml  condition.py  invocation_header_gen.py  sel4_idl.dtd  sel4_idl.xsd  syscall_header_gen.py  syscall_stub_gen.py  syscall_stub_gen_rs.py  xml_namespace.xsd  xmllint.sh
libsel4/tools/loader/: __init__.py
(+1855 files in other folders)
